--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,21 +10,21 @@
                 </small>
             </h1>
         </div>
-        <div class="userboard profile-board-col">
-            <div class="username">
-                <span>
-                    <a " href="/about">{{site.name}}</a>
-                </span>
-            </div>
-            <div class=" userdesc">
-                <p>{{site.description}}</p>
-            </div>
-            <div class="link-to-notes text-right">
-                <i class="fas fa-link"></i>
-                <a href="/notes">{{site.notes_url}}/notes</a>
-            </div>
-        </div>
-    </div>
+#        <div class="userboard profile-board-col">
+#            <div class="username">
+#                <span>
+#                    <a " href="/about">{{site.name}}</a>
+#                </span>
+#            </div>
+#            <div class=" userdesc">
+#                <p>{{site.description}}</p>
+#            </div>
+#            <div class="link-to-notes text-right">
+#                <i class="fas fa-link"></i>
+#                <a href="/notes">{{site.notes_url}}/notes</a>
+#            </div>
+#       </div>
+#    </div>
     <div class="main-site-subheader menu disable-select text-center">
         <div class="about">
             <a " href="/about">
